# Atlas_Preview

./: .gitignore  CMakeLists.txt  README.md  template.kra
source/: main.cpp
